--- a/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
+++ b/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
@@ -6,6 +6,13 @@ button:focus{
     outline: none;
 }
 
+::-webkit-input-placeholder{
+    color: #B0B0B0;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    font-weight: 500;
+}
+
 .main-container{
     padding: 0 31px 101px 35px;
     margin-top: 22px;
@@ -124,15 +131,19 @@ button:focus{
         padding-bottom: 11px;
         margin-bottom: 16px;
     }
-
-    .k-input-value-text{
-        font-size:14px;
-        color:#2A2A2A;
-        font-weight: 500;
-    }
 }
 
-::-webkit-input-placeholder{
+::ng-deep .dropdown .k-input-value-text{
+    font-size:14px;
+    color:#B0B0B0;
+    font-weight: 500;
+}
+::ng-deep .data-selected .k-input-value-text{
+    color:#2A2A2A;
+}
+
+::ng-deep .date-picker .k-dateinput .k-input-inner::placeholder,
+::ng-deep .input-box::placeholder{
     color: #B0B0B0;
     font-family: "Proxima Nova";
     font-size: 14px;
@@ -191,12 +202,42 @@ button:focus{
     }
 } 
 
+// DATE PICKER //
+.date-picker{
+    height: 40px;
+}
+
+::ng-deep {
+    .k-button-flat-primary{
+      color: #3e91c1;
+    }
+  
+    .k-calendar .k-calendar-view .k-today,
+    .k-calendar .k-calendar-navigation li:hover{
+      color: #3e91c1;
+    }
+  
+    .k-calendar .k-calendar-td.k-selected:hover .k-link,
+    .k-calendar .k-calendar-td.k-selected .k-link {
+      background-color: #3e91c1 !important;
+    }
+  }
+  
+::ng-deep .date-picker .k-button-md.k-icon-button .k-button-icon {
+    border: none !important ;
+}
+
 .input-container {
     grid-column: 3 / 4;
     grid-row: 2 / 4;
 }
 
 //LISTBOX SECTION STYLE //
+.list-disabled{
+    pointer-events: none;
+    opacity: .5;
+}
+
 .listbox-section{
     grid-column: 1/3;
     
@@ -225,8 +266,7 @@ button:focus{
     .k-treeview{
         padding: 15px 16px 45px 13px;
         border-radius: 5px;
-        border: 1px solid #DFDFDF;
-        height: 540px;
+        height: 519px;
     }
 
     .k-treeview-leaf{
@@ -245,8 +285,6 @@ button:focus{
     .k-checkbox:checked:focus{
         box-shadow: none;
     }
-
-
 }
 
 .button-container{
@@ -307,14 +345,21 @@ button:focus{
     }
 }
 
+.light-border{
+    border: 1px solid #DFDFDF;
+    border-radius: 5px;
+}
+
 .total-section{
-    position: absolute;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 4px;
+    height: 40px;
     bottom: 1px;
     left: 13px;
     right: 15px;
     border-top: 1px solid #DFDFDF;
     padding: 8px;
-    padding-left: 24px;
     background-color: #FFF;
     z-index: 99;
 
@@ -331,21 +376,25 @@ button:focus{
     }
 }
 
-::ng-deep .k-treeview::-webkit-scrollbar {
-    width: 8px;
-}
-  
-::ng-deep .k-treeview::-webkit-scrollbar-track {
-    background-color: #FFF;
-    border-radius: 5px;
-    
-}
-  
-::ng-deep .k-treeview::-webkit-scrollbar-thumb {
-    background-color: #BFBFBF;
-    border-radius: 10px;
-}
-  
-.k-treeview::-webkit-scrollbar-thumb:hover {
-    background-color: #acacac;
+
+// TREEVIEW SCROLLBAR //
+::ng-deep{
+    .k-treeview::-webkit-scrollbar {
+        width: 8px;
+    }
+      
+    .k-treeview::-webkit-scrollbar-track {
+        background-color: #FFF;
+        border-radius: 5px;
+        
+    }
+      
+    .k-treeview::-webkit-scrollbar-thumb {
+        background-color: #BFBFBF;
+        border-radius: 10px;
+    }
+      
+    .k-treeview::-webkit-scrollbar-thumb:hover {
+        background-color: #acacac;
+    }
 }
