--- a/src/app/shared/components/header-two/header-two.component.html
+++ b/src/app/shared/components/header-two/header-two.component.html
@@ -47,6 +47,26 @@
                 <span (click)="onSaasRevenue($event)">Saas Revenue</span>
               </div>
         </div>
+
+        <div class="chat-configuration">
+            <a
+                class="link chat-popup-btn"
+                (click)="showChatConfigurationOptions()"
+                [ngClass]="{ 'active-link': showChatMenu }">
+                Chat Configuration
+                <span class="arrow"></span>
+            </a>
+
+            <div
+                class="popup popup-chat d-flex flex-column"
+                *ngIf="showChatMenu"
+              >
+                <span (click)="onChatNodeAndCategories()">Chat Nodes and Categories</span>
+                <span (click)="onChatQuestionAnswer()">Chat Questions and Answers</span>
+                <span (click)="onChatQuestionAnswerClient()">Chat Questions and Answers - Clients</span>
+                <span (click)="onChatQuestionAnswerFranchise()">Chat Questions and Answers - Franchises</span>
+              </div>
+        </div>
     </nav>
 
     <div class="profile-container">
