--- a/src/app/shared/components/header-two/header-two.component.scss
+++ b/src/app/shared/components/header-two/header-two.component.scss
@@ -31,6 +31,10 @@
     position: relative;
 }
 
+.chat-configuration{
+    position: relative;
+}
+
 .popup span{
     font-size: 14px;
     padding: 10px;
@@ -51,6 +55,10 @@
 }
 
 .popup-reports{
+    position: absolute;
+}
+
+.popup-chat{
     position: absolute;
 }
 
