--- a/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.scss
+++ b/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.scss
@@ -106,6 +106,7 @@ button:focus {
     font-family: 'Proxima Nova';
     font-size: 12px;
     color: #FFF;
+    position: relative;
 }
 
 :host ::ng-deep .create-new-dropdown {
@@ -143,6 +144,18 @@ button:focus {
 :host ::ng-deep .create-new-dropdown.option-selected {
     .k-input-inner::before {
         content: '' !important;
+    }
+}
+
+//POPUP SETTING //
+::ng-deep .chat-question-answer-franchise  .create-new-dropdown {
+    .k-animation-container {
+        position: fixed !important;
+        right: 24px
+    }
+
+    .k-list-content {
+        padding: 0;
     }
 }
 
