--- a/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.html
+++ b/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.html
@@ -44,6 +44,7 @@
                 [rowData]="rowData"
                 [gridOptions]="gridOptions"
                 [sideBar]="sideBar"
+                [rowGroupPanelShow]="rowGroupPanelShow"
                 (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
                 (gridReady)="onGridReady($event)">
             </ag-grid-angular>
