--- a/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
+++ b/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
@@ -102,6 +102,13 @@ button:focus{
     background: #296689;
 }
 
+//POPUP SETTING //
+::ng-deep .create-new-group .dropdown {
+    .k-animation-container {
+        position: fixed !important;
+    }
+}
+
 
 // INPUT STYLE //
 :host ::ng-deep {
@@ -133,12 +140,12 @@ button:focus{
     }
 }
 
-::ng-deep .dropdown .k-input-value-text{
+:host ::ng-deep .dropdown .k-input-value-text{
     font-size:14px;
     color:#B0B0B0;
     font-weight: 500;
 }
-::ng-deep .data-selected .k-input-value-text{
+:host ::ng-deep .data-selected .k-input-value-text{
     color:#2A2A2A;
 }
 
@@ -195,15 +202,51 @@ button:focus{
 }
 
 .listbox-section{
-    grid-column: 1/3;
+    height: 550px;
+    position: relative;
+
+    &-heading{
+        color: #2A2A2A;
+        font-family: "Proxima Nova";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 24px;
+        border-bottom: 1px solid #DFDFDF;
+        padding-bottom: 16px;
+    }
+
+    &-subheading{
+        color: #2A2A2A;
+        font-family: "Proxima Nova";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 16px;
+        margin-top: 24px;
+        margin-bottom: 31px;
+    }
     
-    &-heading,
     .list-heading{
         color: #2E2E2E;
         font-family: "Proxima Nova";
         font-size: 14px;
         font-weight: 500;
         margin-bottom: 7px;
+    }
+
+    .dialog-close-icon{
+        padding: 0;
+        img{
+            height: 20px;
+            width: 20px;
+        }
+    }
+
+    .close-icon-div{
+        position: absolute;
+        right: -4px;
+        top: -10px;
     }
 }
 
@@ -215,6 +258,10 @@ button:focus{
     .child-list{
         flex-grow: 1;
         position: relative;
+    }
+
+    .child-list{
+        align-self: flex-start;
     }
 }
 
@@ -257,6 +304,11 @@ button:focus{
     line-height: 16px;
     border: none;
     cursor: pointer;
+    text-transform: uppercase;
+}
+
+.w-fit-content{
+    width: fit-content !important;
 }
 
 .btn-light{
@@ -269,9 +321,9 @@ button:focus{
 
 .form-actions{
     display: flex;
-    flex-direction: column;
     gap: 12px;
     margin-top: 25px;
+    justify-content: end;
 }
 
 .btn-save{
@@ -352,5 +404,489 @@ button:focus{
       
     .k-treeview::-webkit-scrollbar-thumb:hover {
         background-color: #acacac;
+    }
+}
+
+
+// SELECTOR POPUP //
+::ng-deep .k-dialog.list-dialog {
+    padding: 0px !important;
+    
+    .k-dialog-actions{
+        width: fit-content !important;
+        display: flex !important;
+        margin: 12px 20px 0px auto !important;
+        border: none;
+        padding-right: 0px !important;
+    
+        .btn{
+            font-family: "Proxima Nova";
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 16px;
+            border: none;
+            cursor: pointer;
+            text-transform: uppercase;
+        }
+    
+        .btn-add{
+            border-radius: 4px;
+            background: #296689;
+            height: 32px;
+            padding: 8px 20px;
+            color: #FFF;
+    
+            &:active{
+                background-color:#296689;
+                color: #FFF;
+            }
+        }
+    
+        .btn-cancel{
+            border-radius: 4px;
+            background: rgba(61, 146, 174, 0.15);
+            padding: 8px 17px;
+            color:  #296689;
+            width: 82px;
+            height: 32px;
+        
+            &:active{
+                background: rgba(61, 146, 174, 0.15);
+            }
+        }
+    } 
+}
+
+.table-section{
+    margin-top: 24px;
+    position: relative;
+}
+
+// TABLE STYLE //
+.ag-theme-balham {
+    --ag-selected-row-background-color: #f3f6f7 !important;
+    --ag-row-hover-color: none !important;
+    --ag-input-focus-box-shadow: 0 0 2px 1px transparent !important;
+}
+
+:host ::ng-deep{
+    .ag-header-row {
+        color: #2A2A2A;
+        font-family: 'Proxima Nova';
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 16px;
+    }
+
+    .ag-row-odd {
+        background: none;
+    }
+
+    .ag-row-selected::before {
+        background-color: transparent;
+    }
+
+    .ag-cell {
+        display: flex;
+        align-items: center;
+        font-family:'Proxima Nova';
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 16px; 
+    }
+
+    .ag-cell-expandable {
+        align-items: center;
+    }
+
+    .ag-row-level-1 {
+        background: rgba(217, 217, 217, 0.2);
+    }
+
+    .ag-icon-tree-closed::before {
+        content: url("/assets/images/chevron-right-icon.svg");
+    }
+
+    .ag-icon-tree-open::before {
+        content: url("/assets/images/chevron-down-icon.svg");
+    }
+
+    .ag-group-contracted,
+    .ag-group-expanded {
+        width: 11px;
+        height: unset !important;
+        margin-top: -5px;
+    }
+
+    // FLOATING FILTER
+    .ag-floating-filter {
+        border-top: none !important;
+        &::after {
+        display: none;
+        }
+    }
+
+    .ag-floating-filter-button {
+        margin-left: unset;
+    }
+
+    .ag-icon-filter::before {
+        content: url("/assets/images/floating-filter-icon.svg");
+    }
+
+    .ag-header-row-column-filter {
+        background-color: #fff;
+
+        .ag-floating-filter input {
+            background-color: #fff;
+            border: none;
+            border-bottom: 1px solid #dfdfdf;
+        }
+    }
+
+    .ag-ltr .ag-header-expand-icon{
+        padding-left: 5px;
+    }
+
+    .ag-header-expand-icon-collapsed .ag-icon-contracted::before{
+        content: url("/assets/images/chevron-right-icon.svg");
+    }
+    .ag-icon-expanded::before{
+        content: url("/assets/images/chevron-left.svg");
+    }
+
+    .ag-icon-contracted{
+        margin-top: -4px;
+    }
+
+    .ag-icon-expanded{
+        margin-top: -8px;
+    }
+
+    .ag-column-panel-column-select{
+        border-top: none;
+    }
+
+    .ag-column-select-header-icon .ag-icon-tree-open,
+    .ag-column-select-column-group .ag-icon-tree-open,
+    .ag-filter-toolpanel-group-title-bar-icon,
+    .ag-filter-toolpanel-expand{
+        margin-top: -6px;
+    }
+
+    .ag-column-select-header-icon .ag-icon-tree-closed,
+    .ag-filter-toolpanel-group-title-bar-icon .ag-icon-tree-open,
+    .ag-filter-toolpanel-expand .ag-icon-tree-open{
+        margin-top: -3px;
+    }
+
+    .ag-column-select-column-group .ag-icon-tree-closed{
+        margin-top: -5px;
+    }
+}
+
+// CHECKBOX //
+:host ::ng-deep .ag-pinned-left-header {
+    .ag-checkbox-input {
+      appearance: none;
+      -webkit-appearance: none;
+      cursor: pointer;
+    }
+  
+    .ag-header-select-all {
+      margin-right: 5px;
+    }
+  
+    .ag-checkbox-input-wrapper:active {
+      box-shadow: none;
+    }
+    .ag-checkbox-input-wrapper {
+      background-color: transparent !important;
+    }
+  
+    .ag-checkbox-input-wrapper::after {
+      display: block;
+      content: url("/assets/images/chevron-right-icon.svg");
+      background: fixed;
+      background-size: cover;
+      margin-left: 2px;
+      margin-top: -2px;
+    }
+  
+    .ag-checkbox-input-wrapper.icon-clicked::after {
+      display: block;
+      content: url("/assets/images/chevron-down-icon.svg");
+      background: fixed;
+      background-size: cover;
+      margin-left: 0;
+      margin-top: -4px;
+    }
+}
+
+// RESET BUTTON //
+.resetButton {
+    position: absolute;
+    background-color: #f7f7f7;
+    border-right: 1px solid rgb(189, 195, 199) !important;
+    height: 63px;
+    width: 87.5%;
+    border: 0;
+    font-size: 14px;
+    color: #0a4569;
+    font-weight: 700;
+    top: 0;
+    left: 0;
+    border-bottom: 1px solid rgb(189,195,199);
+
+    &:hover {
+      background: #c8d3dc !important;
+    }
+}
+
+// FLY OUT PANEL//
+:host ::ng-deep {
+    .ag-side-bar {
+        padding: 0 4px 0px 0px;
+        position: relative;
+    }
+
+    .ag-side-button-label,
+    .ag-tool-panel-wrapper,
+    .ag-group-title {
+        color: #2a2a2a;
+        font-family: "Proxima Nova";
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+    }
+    .ag-side-buttons {
+        padding-top: 0;
+        margin-top: 33px;
+        margin-left: 5px;
+    }
+
+    .ag-side-button .ag-icon-columns::before {
+        content: url("/assets/images/column-icon-dark.svg");
+    }
+
+    .ag-side-button .ag-icon-filter::before {
+        content: url("/assets/images/floating-filter-icon.svg");
+    }
+
+    .ag-side-button-icon-wrapper {
+        margin-bottom: 4px;
+    }
+
+    button.ag-side-button-button {
+        border: none;
+        padding: 0;
+    }
+
+    .ag-side-button:last-child {
+        margin-top: 31px;
+    }
+
+    .ag-side-bar-right .ag-tool-panel-wrapper {
+        margin-top: 63px;
+    }
+}
+
+// STATUSBAR //
+:host ::ng-deep {
+    .ag-status-name-value {
+      color: #2a2a2a;
+      font-family: "Proxima Nova";
+      font-size: 12px;
+      line-height: 16px;
+      padding: 0;
+    }
+  
+    .ag-status-name-value-value {
+      font-weight: 700;
+    }
+  
+    .ag-status-name-value span:first-child {
+      font-weight: 400;
+    }
+  
+    .ag-status-bar {
+      min-height: 37px;
+      padding: 11px 25px;
+    }
+}
+
+.status-bar-text {
+    position: absolute;
+    left: 24px;
+    bottom: 48px;
+  
+    p {
+        color: #2A2A2A;
+        font-family: 'Proxima Nova';
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+    }
+  
+    span {
+      font-weight: 700;
+    }
+}
+
+
+// PAGING PANEL 
+.items-dropdown {
+    position: absolute;
+    bottom: 10px;
+    left: 24px;
+    background: none;
+    border: none;
+    color: #2A2A2A;
+
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+}
+
+
+:host ::ng-deep {
+    .ag-paging-panel{
+        height: 37px;
+        background: #F3F6F7;
+        padding: 11px 25px 11px 24px;
+        color: #2A2A2A;
+        font-family: 'Proxima Nova';
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px; 
+    }
+
+    .ag-paging-row-summary-panel {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .ag-paging-page-summary-panel {
+        position: absolute;
+        right: 12px;
+    }
+
+    .ag-icon::before {
+        color: #296689 !important;
+    }
+  
+    .ag-paging-button.ag-disabled {
+        opacity: 0.4;
+    }
+}
+
+// SCROLLBAR //
+:host ::ng-deep {
+    .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
+      right: 4px;
+    }
+    .ag-root ::-webkit-scrollbar {
+      width: 6px !important;
+      height: 6px !important;
+      margin-right: 2px;
+      z-index: 99;
+    }
+  
+    .ag-root ::-webkit-scrollbar-thumb {
+      background-color: #d9d9d9;
+      border-radius: 6px;
+    }
+  
+    .ag-body-vertical-scroll {
+      right: 5px;
+      position: absolute !important;
+    }
+  }
+
+// UNSAVED CHNAGES POPUP
+::ng-deep {
+    .ok-btn{
+        display: flex;
+        height: 32px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        background: #296689;
+        padding: 8px 14px 8px 15px;
+        text-transform: uppercase;
+        font-family: 'Proxima Nova';
+        color: #FFF;
+        font-size: 14px;
+        line-height: 16px;
+        font-weight: 600;
+
+        &:hover {
+            background: #296689;
+        }
+    }
+
+    .cancel-btn {
+        display: flex;
+        width: 92px;
+        height: 32px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        background: #e4eff3;
+        padding: 8px 14px 8px 15px;
+        text-transform: uppercase;
+        font-family: 'Proxima Nova';
+        color: #296689;
+        font-size: 14px;
+        font-weight: 800;
+        line-height: 16px;
+
+        &:hover {
+            background: #e4eff3;
+        }
+    }
+
+    .k-dialog-wrapper .k-dialog {
+        padding: 20px;
+        border-radius: 5px;
+    }
+
+    .k-dialog-actions {
+        width: 65% !important;
+        border: transparent !important;
+        padding-inline: 16px !important;
+        margin: unset;
+    }
+
+    .k-window-title {
+        font-size: 20px;
+        font-weight: 600;
+        padding-bottom: 20px;
+        border-bottom: 2px solid #DADADA;
+    }
+
+    .k-window-titlebar {
+        padding: 12px 0px 12px 12px;
+    }
+
+    .k-dialog-titlebar {
+        background-color: transparent;
+        border-bottom: 2px solid #fafafa;
+    }
+
+    .k-window-content {
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+
+    .k-window-titlebar-actions {
+        padding-bottom: 30px !important;
+    }
+
+    .k-dialog-wrapper .k-svg-i-x{
+        border-radius: 50% !important;
+        border: 2px solid black !important;
     }
 }
