--- a/src/app/post-login/components/announcement-management/announcement-management.component.scss
+++ b/src/app/post-login/components/announcement-management/announcement-management.component.scss
@@ -32,6 +32,7 @@ button:focus {
             font-family: 'Proxima Nova';
             font-size: 24px;
             font-weight: 700;
+            text-transform: capitalize;
         }
     }
 
@@ -133,6 +134,10 @@ button:focus {
         font-size: 12px;
         font-weight: 600;
         line-height: 16px;
+    }
+
+    .ag-header-cell-text{
+        text-transform: capitalize;
     }
 
     .ag-row-odd {
