--- a/src/app/post-login/components/leads-per-community/leads-per-community.component.scss
+++ b/src/app/post-login/components/leads-per-community/leads-per-community.component.scss
@@ -45,6 +45,7 @@ button:focus {
       font-size: 24px;
       font-weight: 700;
       line-height: normal;
+      text-transform: capitalize;
     }
   }
 
@@ -81,13 +82,12 @@ button:focus {
     .btn-export {
       width: 92px;
       height: 32px;
-      border-radius: 4;
+      border-radius: 4px;
       padding: 8px 14px 8px 15px;
       background-color: #296689;
       color: #fff;
       font-family: "Proxima Nova";
       font-size: 12px;
-      font-weight: 600;
       line-height: 16px;
     }
   }
@@ -121,6 +121,11 @@ button:focus {
     font-style: normal;
     font-weight: 600;
     line-height: 16px;
+  }
+
+  .ag-header-group-text,
+  .ag-header-cell-text{
+      text-transform: capitalize;
   }
 
   .ag-row-odd {
