--- a/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
+++ b/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
@@ -41,6 +41,7 @@ button:focus {
             font-weight: 600;
             font-size: 24px;
             line-height: 32px;
+            text-transform: capitalize;
         }
     }
 
@@ -166,6 +167,10 @@ button:focus {
         font-size: 12px;
         font-weight: 600;
         line-height: 16px;
+    }
+
+    .ag-header-cell-text{
+        text-transform: capitalize;
     }
 
     .ag-row-odd {
@@ -441,6 +446,7 @@ button:focus {
         font-family: 'Proxima Nova';
         line-height: 24px;
         margin-bottom: 10px;
+        text-transform: capitalize;
     }
 
     .label-text {
@@ -449,6 +455,7 @@ button:focus {
         line-height: 16px;
         font-weight: 600;
         margin-bottom: 8px;
+        text-transform: capitalize;
     }
 }
 
