--- a/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.html
+++ b/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.html
@@ -10,7 +10,7 @@
                 <div class="input-container">
                     <input 
                         type="text" 
-                        placeholder="search client, franchise or assessment"        
+                        placeholder="Search client, franchise or assessment.."        
                         id="filter-text-box"
                         (input)="onSearch()"
                     >
