--- a/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.scss
+++ b/src/app/post-login/components/chat-configuration/chat-question-answer-franchise/chat-question-answer-franchise.component.scss
@@ -41,6 +41,7 @@ button:focus {
             font-weight: 600;
             font-size: 24px;
             line-height: 32px;
+            text-transform: capitalize;
         }
     }
 
@@ -173,6 +174,10 @@ button:focus {
         font-size: 12px;
         font-weight: 600;
         line-height: 16px;
+    }
+
+    .ag-header-cell-text{
+        text-transform: capitalize;
     }
 
     .ag-row-odd {
@@ -457,6 +462,7 @@ button:focus {
         font-family: 'Proxima Nova';
         line-height: 24px;
         margin-bottom: 10px;
+        text-transform: capitalize;
     }
 
     .label-text {
@@ -465,6 +471,7 @@ button:focus {
         line-height: 16px;
         font-weight: 600;
         margin-bottom: 8px;
+        text-transform: capitalize;
     }
 }
 
