--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -82,6 +82,7 @@ button:focus {
             font-family: 'Proxima Nova';
             font-size: 24px;
             font-weight: 700;
+            text-transform: capitalize;
         }
     }
 
@@ -152,6 +153,11 @@ button:focus {
         font-size: 12px;
         font-weight: 600;
         line-height: 16px;
+    }
+
+    .ag-header-group-text,
+    .ag-header-cell-text{
+        text-transform: capitalize;
     }
 
     .ag-row-odd {
@@ -586,4 +592,5 @@ button:focus {
     background-color: #f5f7f7;
     font-size: 12px;
     color: #2F2F2F;
+    text-transform: uppercase;
 }
